--- a/songs/popular/John_Denver__Country_Roads.html
+++ b/songs/popular/John_Denver__Country_Roads.html
@@ -6,6 +6,7 @@
 <title>Country Roads</title>
 <script type="text/javascript" src="/js/navigationTableScript.js"></script>
 <script type="text/javascript" src="/js/sheetDarkModeScript.js"></script>
+<script type="text/javascript" src="/js/sheetDownloaderScript.js"></script>
 <style type="text/css">
 @media (prefers-reduced-motion: reduce)
 {
