--- a/songs/movies/RADWIMPS__Nandemonaiya.html
+++ b/songs/movies/RADWIMPS__Nandemonaiya.html
@@ -149,7 +149,7 @@ silence { background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3
 <h1>Nandemonaiya</h1>
 <p class="header"><b>Original artist(s): </b>RADWIMPS</p>
 <p class="header"><b>Arranger, Transcriber: </b>NRSPlays</p>
-<p class="header"><b>Musical key: </b>C</p>
+<p class="header"><b>Musical key: </b>Gb</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/2x-AIBpWS0Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
