--- a/songs/popular/RADWIMPS__Is_There_Still_Anything_That_Love_Can_Do.html
+++ b/songs/popular/RADWIMPS__Is_There_Still_Anything_That_Love_Can_Do.html
@@ -149,7 +149,7 @@ silence { background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3
 <h1>Is There Still Anything That Love Can Do?</h1>
 <p class="header"><b>Original artist(s): </b>RADWIMPS</p>
 <p class="header"><b>Arranger, Transcriber: </b>NRSPlays</p>
-<p class="header"><b>Musical key: </b>C</p>
+<p class="header"><b>Musical key: </b>A</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/FNpXIlP0cl8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
