--- a/songs/popular/Two_Steps_from_Hell__Victory.html
+++ b/songs/popular/Two_Steps_from_Hell__Victory.html
@@ -148,7 +148,7 @@ silence { background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3
 <body>
 <h1>Victory</h1>
 <p class="header"><b>Original artist(s): </b>Two Steps from Hell</p>
-<p class="header"><b>Arranger, Transcriber: </b>Sky Children Music Studio</p>
+<p class="header"><b>Arranger, Transcriber: </b><a href="https://youtube.com/channel/UClRBeHSoDSfggiCc-tXQkkQ">Sky Children Music Studio</a></p>
 <p class="header"><b>Musical key: </b>F</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/qfb2Yvr9SXg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
