--- a/songs/videogames/I_Was_Born_For_This_Aurora.html
+++ b/songs/videogames/I_Was_Born_For_This_Aurora.html
@@ -158,6 +158,7 @@ silence { background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3
 <p class="header"><b>Arranger, Transcriber: </b>Tracey</p>
 <p class="header"><b>Musical key: </b>A major (default)</p>
 <!-- Embedded video tag goes here (Youtube: share/embed/iframe) -->
+<iframe width="560" height="315" src="https://www.youtube.com/embed/w1emGd17jgs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <div id="ascii" style="display:none;" hidden>
 #$Title: I Was Born For This (AURORA Voice Solo)
 #$Original artist(s): Austin Wintory
