--- a/songs/videogames/I_Was_Born_For_This_Aurora.html
+++ b/songs/videogames/I_Was_Born_For_This_Aurora.html
@@ -163,7 +163,7 @@ silence { background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3
 #$Title: I Was Born For This (AURORA Voice Solo)
 #$Original artist(s): Austin Wintory
 #$Arranger, Transcriber: Tracey
-#$Musical key: A major (default)
+#$Musical keys: A major & G major
 
 #A major
 #Stat #- #su - #a
