Embed YouTube video for The Power - Baldur's Gate 3

--- a/songs/videogames/Borislav_Slavov__The_Power_-_Baldur's_Gate_3_(Flute).html
+++ b/songs/videogames/Borislav_Slavov__The_Power_-_Baldur's_Gate_3_(Flute).html
@@ -157,7 +157,7 @@ silence { background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3
 <p class="header"><b>Original artist(s): </b>Borislav Slavov</p>
 <p class="header"><b>Arranger, Transcriber: </b>moomshire</p>
 <p class="header"><b>Musical key: </b>F/d</p>
-<!-- Embedded video tag goes here (Youtube: share/embed/iframe) -->
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/DOrYNOCprOQ?si=W9B6McGd4NEyTKBg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <div id="ascii" style="display:none;" hidden>
 #$Title: The Power - Baldur's Gate 3  (Flute)
 #$Original artist(s): Borislav Slavov
