Add original artist and transcriber to Bac_ang_Cung_Chung_Chau_Hanh_Quan

--- a/songs/traditional/Bac_ang_Cung_Chung_Chau_Hanh_Quan_-_Huy_Thuc.html
+++ b/songs/traditional/Bac_ang_Cung_Chung_Chau_Hanh_Quan_-_Huy_Thuc.html
@@ -154,8 +154,8 @@ silence { background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3
 </style></head>
 <body>
 <h1>Bác Đang Cùng Chúng Cháu Hành Quân - Huy Thục</h1>
-<p class="header"><b>Original artist(s): </b></p>
-<p class="header"><b>Arranger, Transcriber: </b></p>
+<p class="header"><b>Original artist(s): </b>Huy Thục</p>
+<p class="header"><b>Arranger, Transcriber: </b>Minhlinkthe</p>
 <p class="header"><b>Musical key: </b>C</p>
 <!-- Embedded video tag goes here (Youtube: share/embed/iframe) -->
 <div id="ascii" style="display:none;" hidden>
