--- a/songs/classical/Paul_Halley__Winter.html
+++ b/songs/classical/Paul_Halley__Winter.html
@@ -25,6 +25,8 @@ body
 {
 	font-family: "Noto Sans", "Noto Sans CJK JP", "Noto Sans CJK KR", "Noto Sans CJK SC", "Noto Sans CJK TC", "Avenir", "Arial", "sans-serif";
 	font-size: 12pt;
+	color: #282828;
+	background-color: white;
 }
 
 h1
