Update Nearer My God to Thee

--- a/songs/traditional/Nearer_My_God_to_Thee.html
+++ b/songs/traditional/Nearer_My_God_to_Thee.html
@@ -4,8 +4,8 @@
 
 <meta name="date.created" content="2024-09-04 20:17:42.991672">
 <title>Nearer My God to Thee</title>
-<script type="text/javascript" src="./Nearer My God to Thee_files/navigationTableScript.js"></script>
-<script type="text/javascript" src="./Nearer My God to Thee_files/sheetDownloaderScript.js"></script>
+<script type="text/javascript" src="./Nearer_My_God_to_Thee_files/navigationTableScript.js"></script>
+<script type="text/javascript" src="./Nearer_My_God_to_Thee_files/sheetDownloaderScript.js"></script>
 <style type="text/css">
 @media (prefers-reduced-motion: reduce)
 {
@@ -153,6 +153,7 @@ silence { background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3
 
 </style></head>
 <body>
+<table id="navigation"><tbody><tr><td><a href="/index.html"><img src="/assets/images/sky-music-logo.png" width="177px" height="121px"></a></td><td><h1><a href="/index.html">Sky Music</a></h1></td></tr></tbody></table>
 <h1>Nearer My God to Thee</h1>
 <p class="header"><b>Original artist(s): </b>Sarah Flower Adams</p>
 <p class="header"><b>Arranger, Transcriber: </b>Guamgirl</p>
