--- a/songs/traditional/Nearer_My_God_to_Thee.html
+++ b/songs/traditional/Nearer_My_God_to_Thee.html
@@ -4,8 +4,8 @@
 
 <meta name="date.created" content="2024-09-04 20:17:42.991672">
 <title>Nearer My God to Thee</title>
-<script type="text/javascript" src="./Nearer_My_God_to_Thee_files/navigationTableScript.js"></script>
-<script type="text/javascript" src="./Nearer_My_God_to_Thee_files/sheetDownloaderScript.js"></script>
+<script type="text/javascript" src="/js/navigationTableScript.js"></script>
+<script type="text/javascript" src="/js/sheetDownloaderScript.js"></script>
 <style type="text/css">
 @media (prefers-reduced-motion: reduce)
 {
