Fix title and arranger/artist formatting for Mad World

--- a/songs/popular/Tears_for_Fears,_Gary_Jules__Mad_World.html
+++ b/songs/popular/Tears_for_Fears,_Gary_Jules__Mad_World.html
@@ -154,8 +154,8 @@ silence { background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3
 </style></head>
 <body>
 <h1>Mad World</h1>
-<p class="header"><b>Original artist(s): Tears for Fears, Gary Jules</b></p>
-<p class="header"><b>Arranger, Transcriber: Readifer</b></p>
+<p class="header"><b>Original artist(s):</b> Tears for Fears, Gary Jules</p>
+<p class="header"><b>Arranger, Transcriber:</b> Readifer</p>
 <p class="header"><b>Musical key: </b>E♭</p>
 <!-- Embedded video tag goes here (Youtube: share/embed/iframe) -->
 <div id="ascii" style="display:none;" hidden>
