Update page title for Mad World

--- a/songs/popular/Tears_for_Fears,_Gary_Jules__Mad_World.html
+++ b/songs/popular/Tears_for_Fears,_Gary_Jules__Mad_World.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="date.created" content="2025-12-16 04:11:06.734011"/>
-<title>Mad world</title>
+<title>Mad World - Tears for Fears, Gary Jules, Readifer</title>
 <script type="text/javascript" src="/js/navigationTableScript.js"></script>
 <script type="text/javascript" src="/js/sheetDownloaderScript.js"></script>
 <style type="text/css">
